[Sync] Fix flakiness from Sessions refactor

Fixes a flaky issue introduced in the recent tabs submenu tests due to
inspecting possibly unset timestamp values. Also fixes a pre-existing issue
where sync ids for tabs were not being set, which the refactor brought
to light.

BUG=671902, 671902
TBR=msw

Review-Url: https://codereview.chromium.org/2562853002
Cr-Commit-Position: refs/heads/master@{#437604}

Former-commit-id: f4224baa9e43677897f657a97b810a89245f6631