chrome/browser/ui/toolbar/recent_tabs_sub_menu_model_unittest.cc
@@ -573,8 +573,7 @@ TEST_F(RecentTabsSubMenuModelTest, MaxTabsPerSessionAndRecency) {
     EXPECT_EQ(tab_titles[i], model.GetLabelAt(i + 5));
 }
 
-// Flaky, see crbug.com/671902.
-TEST_F(RecentTabsSubMenuModelTest, DISABLED_MaxWidth) {
+TEST_F(RecentTabsSubMenuModelTest, MaxWidth) {
   // Create 1 session with 1 window and 1 tab.
   RecentTabsBuilderTestHelper recent_tabs_builder;
   recent_tabs_builder.AddSession();
